--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
+    "mailtrap": "^3.4.0",
     "mongoose": "^8.7.0",
     "nodemon": "^3.1.7",
     "server": "file:"
